// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyPairRepository should create 1`] = `
Object {
  "databaseName": Object {
    "key_pair": Object {
      "data": Array [
        Object {
          "algorithms": Array [
            "ES512",
          ],
          "allowed": 2020-01-01T08:00:00.000Z,
          "created": 2020-01-01T08:00:00.000Z,
          "events": Array [
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "key_pair_created",
              "payload": Object {
                "algorithms": Array [
                  "ES512",
                ],
                "allowed": 2020-01-01T08:00:00.000Z,
                "created": 2020-01-01T08:00:00.000Z,
                "expires": null,
                "external": false,
                "id": "7531da89-12e9-403e-925a-5da49100635c",
                "namedCurve": "P-521",
                "passphrase": null,
                "preferredAlgorithm": "ES512",
                "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
                "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
                "type": "EC",
                "updated": 2021-01-01T08:00:00.000Z,
                "version": 0,
              },
            },
          ],
          "expires": null,
          "external": false,
          "id": "7531da89-12e9-403e-925a-5da49100635c",
          "namedCurve": "P-521",
          "passphrase": null,
          "preferredAlgorithm": "ES512",
          "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
          "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
          "type": "EC",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`KeyPairRepository should find 1`] = `
Object {
  "algorithms": Array [
    "ES512",
  ],
  "allowed": 2020-01-01T08:00:00.000Z,
  "created": 2020-01-01T08:00:00.000Z,
  "events": Array [
    Object {
      "date": 2021-01-01T08:00:00.000Z,
      "name": "key_pair_created",
      "payload": Object {
        "algorithms": Array [
          "ES512",
        ],
        "allowed": 2020-01-01T08:00:00.000Z,
        "created": 2020-01-01T08:00:00.000Z,
        "expires": null,
        "external": false,
        "id": "7531da89-12e9-403e-925a-5da49100635c",
        "namedCurve": "P-521",
        "passphrase": null,
        "preferredAlgorithm": "ES512",
        "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
        "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
        "type": "EC",
        "updated": 2021-01-01T08:00:00.000Z,
        "version": 0,
      },
    },
  ],
  "expires": null,
  "external": false,
  "id": "7531da89-12e9-403e-925a-5da49100635c",
  "namedCurve": "P-521",
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
  "type": "EC",
  "updated": 2021-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPairRepository should find many 1`] = `
Array [
  Object {
    "algorithms": Array [
      "ES512",
    ],
    "allowed": 2020-01-01T08:00:00.000Z,
    "created": 2020-01-01T08:00:00.000Z,
    "events": Array [
      Object {
        "date": 2021-01-01T08:00:00.000Z,
        "name": "key_pair_created",
        "payload": Object {
          "algorithms": Array [
            "ES512",
          ],
          "allowed": 2020-01-01T08:00:00.000Z,
          "created": 2020-01-01T08:00:00.000Z,
          "expires": null,
          "external": false,
          "id": "7531da89-12e9-403e-925a-5da49100635c",
          "namedCurve": "P-521",
          "passphrase": null,
          "preferredAlgorithm": "ES512",
          "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
          "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
          "type": "EC",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 0,
        },
      },
    ],
    "expires": null,
    "external": false,
    "id": "7531da89-12e9-403e-925a-5da49100635c",
    "namedCurve": "P-521",
    "passphrase": null,
    "preferredAlgorithm": "ES512",
    "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
    "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
    "type": "EC",
    "updated": 2021-01-01T08:00:00.000Z,
    "version": 0,
  },
  Object {
    "algorithms": Array [
      "ES512",
    ],
    "allowed": 2020-01-01T08:00:00.000Z,
    "created": 2020-01-01T08:00:00.000Z,
    "events": Array [
      Object {
        "date": 2021-01-01T08:00:00.000Z,
        "name": "key_pair_created",
        "payload": Object {
          "algorithms": Array [
            "ES512",
          ],
          "allowed": 2020-01-01T08:00:00.000Z,
          "created": 2020-01-01T08:00:00.000Z,
          "expires": null,
          "external": false,
          "id": "7531da89-12e9-403e-925a-5da49100635c",
          "namedCurve": "P-521",
          "passphrase": null,
          "preferredAlgorithm": "ES512",
          "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
          "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
          "type": "EC",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 0,
        },
      },
    ],
    "expires": null,
    "external": false,
    "id": "7531da89-12e9-403e-925a-5da49100635c",
    "namedCurve": "P-521",
    "passphrase": null,
    "preferredAlgorithm": "ES512",
    "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
    "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
    "type": "EC",
    "updated": 2021-01-01T08:00:00.000Z,
    "version": 0,
  },
]
`;

exports[`KeyPairRepository should remove 1`] = `
Object {
  "databaseName": Object {
    "key_pair": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`KeyPairRepository should update 1`] = `
Object {
  "databaseName": Object {
    "key_pair": Object {
      "data": Array [
        Object {
          "algorithms": Array [
            "ES512",
          ],
          "allowed": 2020-01-01T08:00:00.000Z,
          "created": 2020-01-01T08:00:00.000Z,
          "events": Array [
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "key_pair_created",
              "payload": Object {
                "algorithms": Array [
                  "ES512",
                ],
                "allowed": 2020-01-01T08:00:00.000Z,
                "created": 2020-01-01T08:00:00.000Z,
                "expires": null,
                "external": false,
                "id": "7531da89-12e9-403e-925a-5da49100635c",
                "namedCurve": "P-521",
                "passphrase": null,
                "preferredAlgorithm": "ES512",
                "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
                "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
                "type": "EC",
                "updated": 2021-01-01T08:00:00.000Z,
                "version": 0,
              },
            },
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "key_pair_expires_changed",
              "payload": Object {
                "expires": 2020-01-01T10:00:00.000Z,
              },
            },
          ],
          "expires": 2020-01-01T10:00:00.000Z,
          "external": false,
          "id": "7531da89-12e9-403e-925a-5da49100635c",
          "namedCurve": "P-521",
          "passphrase": null,
          "preferredAlgorithm": "ES512",
          "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
          "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
          "type": "EC",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 1,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
